...
                                "Edit Performance",
                                comment: "Toolbar button title: edit a selected performance"
                            ),
                            systemImage: "square.and.pencil"
                        )
                    }
                    .accessibilityIdentifier("edit-item")
                    .disabled(selection == nil)
                }
                if columns == .all {
                    ToolbarItem {
                        Button(action: addItem) {
                            Label(
...
                                    "Add Performance",
                                    comment: "Toolbar button title: add a new performance"
                                ),
                                systemImage: "plus"
                            )
                        }
                        .accessibilityIdentifier("add-item")
                    }
                }
            }
            .onDeleteCommand {
                guard
                    let selection,
...
